# PuduReport

./: .gitignore  AUTHORS  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  DESING.md  NOTICE  README.dev.md  README.md  SECURITY.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  cla.yml  release.yml
core/: Cargo.toml
core/src/: cvss.rs  cvss4_lookup.rs  lib.rs  markdown.rs  models.rs  workspace.rs
docs/: mcp-security-assessment.md
mcp/: Cargo.toml
mcp/src/: main.rs
scripts/: build-mcp-sidecar.mjs  fetch-typst.mjs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cvss.rs  db.rs  export.rs  git.rs  lib.rs  main.rs  markdown.rs  mcp.rs  models.rs  pdf.rs  workspace.rs
src/components/: ConfirmDialog.tsx  CvssCalculator.tsx  CwePicker.tsx  Dashboard.tsx  LivePreview.tsx  MarkdownEditor.tsx  McpClientCard.tsx  Modal.tsx  PromptDialog.tsx  Rail.tsx  Severity.tsx  Sidebar.tsx  Toast.tsx
src/lib/: api.ts  cvssMetrics.ts  cwe.ts  fonts.ts  projectTypes.ts  sections.ts  severity.ts  types.ts
src/screens/: CoverCanvas.tsx  CoverEditor.tsx  History.tsx  Onboarding.tsx  PdfPreview.tsx  Projects.tsx  Settings.tsx  Welcome.tsx
src/views/: ContentEditor.tsx  FindingEditor.tsx  ReportBuilder.tsx  TemplateLibrary.tsx
templates/: bug-bounty.meta.yaml  bug-bounty.typ  code-dark.tmTheme  corporativo.meta.yaml  corporativo.typ  cti.meta.yaml  cti.typ  documento-libre.meta.yaml  documento-libre.typ  ejecutivo.meta.yaml  ejecutivo.typ  htb.meta.yaml  htb.typ  incidente.meta.yaml  incidente.typ  infra.meta.yaml  infra.typ  oscp.meta.yaml  oscp.typ  pentest.meta.yaml  pentest.typ  redteam.meta.yaml  redteam.typ  retest.meta.yaml  retest.typ
