# Workspace de Rust: core compartido + app Tauri + binario MCP (stdio).
[workspace]
members = ["core", "src-tauri", "mcp"]
resolver = "2"

# El perfil de release vive en la raiz del workspace (Cargo lo ignora en miembros).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
