[package]
name = "pudureport-core"
version = "0.0.6"
description = "Logica compartida de PuduReport: modelo de datos, CVSS, workspace y markdown"
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = { version = "0.12", default-features = false }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
