[package]
name = "pudureport"
version = "0.0.7"
description = "Editor local-first de reportes de pentest con generacion de PDF via Typst"
authors = ["bc0d3"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.77"

# El binario de la app. La logica vive en la libreria para poder testearla.
[[bin]]
name = "pudureport"
path = "src/main.rs"

[lib]
name = "pudureport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pudureport-core = { path = "../core" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
dirs = "5"
regex = "1"
git2 = { version = "0.21", default-features = false }
pulldown-cmark = { version = "0.12", default-features = false }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
opener = { version = "0.7", features = ["reveal"] }

[features]
# Feature por defecto requerida por Tauri en build de produccion.
custom-protocol = ["tauri/custom-protocol"]

# El perfil [profile.release] vive en el Cargo.toml raiz del workspace.
